# kg-rcq

./: .gitignore  README.MD  STRUCTURE.MD  SUB2BIT_MOE_IMPLEMENTATION_SPEC.md  configuration_qwen3_5_moe.py  kaggle_commands.md  modeling_qwen3_5_moe.py  modular_qwen3_5_moe.py  pyproject.toml  state.md
docs/specs/: 2026-05-24-kaggle-remote-control-design.md  2026-05-25-mi300x-remote-workflow-design.md
jobs/: 0001-control-plane-smoke.json
kaggle/qwen36_fp_smoke/: kernel-metadata.json  run_qwen36_fp_smoke.py
kaggle/qwen36_fp_smoke_notebook/: kernel-metadata.json  rcq_qwen36_fp_smoke.ipynb
kaggle/remote_worker/: run_job.py
kaggle/remote_worker/job_templates/: 0001-control-plane-smoke.json  0002-qwen36-fp-smoke.json
rcq_moe/: __init__.py  artifact.py  codebooks.py  correction.py  decomposition.py  hadamard.py  harness.py  metrics.py  official_qwen.py  quantization.py  remote_jobs.py  stats.py  storage.py  text_data.py  tiny_qwen.py  toy_moe.py
scripts/: build_text_fixture.py  official_qwen_text_smoke.py  official_qwen_toy_ablation.py  official_qwen_toy_artifact.py  official_qwen_toy_kl.py  qwen36_fp_smoke.py  qwen36_single_layer_rcq_ablation.py
tests/: test_correction_metrics.py  test_official_qwen_artifact.py  test_official_qwen_harness.py  test_official_qwen_rcq.py  test_official_qwen_text_harness.py  test_qwen36_single_layer_ablation.py  test_rcq_decomposition.py  test_rcq_math.py  test_remote_jobs.py  test_text_data.py  test_tiny_qwen_normal.py  test_tiny_qwen_rcq_conversion.py  test_toy_pipeline.py
tests/fixtures/tiny_bert_tokenizer/: vocab.txt
