[project]
name = "rcq-moe-prototype"
version = "0.1.0"
description = "Reference PyTorch prototype for Router-Coherent Quantization of MoE expert weights."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "torch",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

